// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`roz direct should call handler correctly: DIRECT 1`] = `"DIRECT"`;

exports[`roz direct should return 500 if handler throws 1`] = `
Object {
  "statusCode": 500,
}
`;

exports[`roz direct should return 500 if handler throws 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "FAILED DIRECT",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`roz poll should call handler correctly: POLL 1`] = `"POLL"`;

exports[`roz poll should return 500 if handler throws 1`] = `
Object {
  "statusCode": 500,
}
`;

exports[`roz poll should return 500 if handler throws 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "FAILED POLL",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`roz telegram message should call handler correctly: TELEGRAM 1`] = `"TELEGRAM"`;

exports[`roz telegram message should return 500 if handler throws 1`] = `
Object {
  "statusCode": 500,
}
`;

exports[`roz telegram message should return 500 if handler throws 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "FAILED TELEGRAM",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
